[project]
name = "dmm-param-tuning-pt"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "hyperopt>=0.2.7",
    "matplotlib>=3.10.9",
    "networkx>=3.6.1",
    "numpy>=2.4.6",
    "pandas>=3.0.3",
    "plotly>=6.7.0",
    "scipy>=1.17.1",
    "torch>=2.12.0",
    "tqdm>=4.67.3",
]
